<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/movie_cardView"
        android:layout_width="260dp"
        android:layout_height="360dp"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_24"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="40dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cover_movie_imageView"
            android:layout_width="260dp"
            android:layout_height="360dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/cover_movie"
            android:focusable="true"
            tools:src="@tools:sample/avatars" />

    </FrameLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/movie_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/movie_title"
        android:textSize="@dimen/text_size_24"
        android:ellipsize="end"
        android:maxEms="8"
        android:maxLines="5"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_cardView"/>

    <TextView
        android:id="@+id/movie_rate_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:visibility="visible"
        android:text="@string/movie_rate"
        android:textSize="@dimen/text_size_24"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_title_textView"/>

    <TextView
        android:id="@+id/release_date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/realeasedate"
        android:textSize="@dimen/text_size_24"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_title_textView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>