<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <include layout="@layout/toolbar"
                android:id="@+id/details_appBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/cover_movie_details_imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/cover_movie"
                android:scaleType="centerCrop"
                app:layout_constraintCircleRadius="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_appBar" />

            <TextView
                android:id="@+id/title_movie_detail_textView"
                style="@style/movieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_24"
                android:maxEms="9"
                android:text="@string/movie_title"
                android:textColor="@color/movieDetailsTextBoldColor"
                android:textSize="@dimen/text_size_24"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

            <TextView
                android:id="@+id/title_release_TextView"
                style="@style/Text_Detail_Movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/title_release"
                android:textColor="@color/movieDetailsColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_movie_detail_textView" />

            <TextView
                android:id="@+id/releaseDateTextView"
                style="@style/Text_Detail_Movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/release_date"
                android:textColor="@color/movieDetailsColor"
                app:layout_constraintStart_toEndOf="@id/title_release_TextView"
                app:layout_constraintTop_toBottomOf="@+id/title_movie_detail_textView" />

            <TextView
                android:id="@+id/title_sinopse_textView"
                style="@style/Subtitle_Detail_Movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_24"
                android:text="@string/sinopse"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/releaseDateTextView" />

            <TextView
                android:id="@+id/overview_detail_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:textColor="@color/movieInfoTextColor"
                android:textSize="@dimen/text_size_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_sinopse_textView"
                app:layout_goneMarginEnd="@dimen/margin_24"
                tools:text="@string/sinopse" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="145dp"
                android:layout_height="85dp"
                app:layout_constraintBottom_toBottomOf="@+id/cover_movie_details_imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cover_movie_details_imageView">

                <com.google.android.material.card.MaterialCardView
                    style="@style/LabelRatingCardView"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardElevation="2dp" />

            </FrameLayout>

            <TextView
                android:id="@+id/users_rating_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_32"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_24"
                android:text="@string/star_avaliacao_usuario"
                android:textColor="@color/movieDetailsColor"
                android:textSize="@dimen/text_size_12"
                app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/frameLayout" />

            <TextView
                android:id="@+id/rating_detail_movies_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/_81_percent"
                android:textColor="@color/movieDetailsTextBoldColor"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/users_rating_textView"
                app:layout_constraintStart_toStartOf="@+id/users_rating_textView" />

            <ImageView
                android:id="@+id/star_favorite_imageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_8"
                android:background="@drawable/ic_baseline_star_24"
                android:contentDescription="@string/star_avaliacao_usuario"
                app:layout_constraintBottom_toBottomOf="@+id/users_rating_textView"
                app:layout_constraintEnd_toStartOf="@+id/users_rating_textView"
                app:layout_constraintTop_toTopOf="@+id/rating_detail_movies_textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>